Add cancel craft and complete script assemble & custom command util